--- a/templates/entidades/cliente_ver.html
+++ b/templates/entidades/cliente_ver.html
@@ -1,3 +1,4 @@
-
+{%if cpb.entidad %}
 <a href="{% url 'cliente_ver' id=cpb.entidad.id %}"  title="{{ cpb.detalle_entidad}}" class="modal-detail" data-modal-head="DETALLE CLIENTE {{cpb.entidad.codigo}}" data-fm-callback="reload">
 	<strong>{{ cpb.entidad|truncatechars:60 }}</strong></a>
+{% endif %}	
