ultimo_pago en saldos pendientes

--- a/templates/reportes/cta_cte/saldos_clientes.html
+++ b/templates/reportes/cta_cte/saldos_clientes.html
@@ -30,7 +30,7 @@
                         <th class="text-center"></th>
                         <th class="">Cliente</th>                                                             
                         <th class="text-right">Saldo Pendiente</th>                                                                                                                             
-                        <th class="text-center">Último Pago</th>       
+                        <th class="text-right">Último Pago</th>       
                     </tr>
                 </thead>
                 <tbody>
