--- a/templates/reportes/cta_cte/saldos_proveedores.html
+++ b/templates/reportes/cta_cte/saldos_proveedores.html
@@ -29,6 +29,7 @@
                         <th class="text-center"></th>
                         <th class="">Proveedor</th>                                                             
                         <th class="text-right">Saldo Pendiente</th>                                                                                                                             
+                        <th class="text-right">Último Pago</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -38,7 +39,8 @@
                         <td  title="{{ cpb.entidad__apellido_y_nombre}}" > <strong>
                             <a href="{% url 'cliente_ver' id=cpb.entidad %}"  title="VER" class="modal-detail" data-modal-head="DETALLE PROVEEDOR {{cpb.entidad__codigo}}" data-fm-callback="reload">
                             {{ cpb.entidad__codigo }} - {{ cpb.entidad__apellido_y_nombre}} {% if cpb.entidad__fact_cuit %} - {{cpb.entidad__fact_cuit}}{%endif%}</strong></a></td>
-                        <td class="importe {% if cpb.saldo > 0 %} text-danger{% elif cpb.saldo < 0 %} text-success {% endif %}">${{cpb.saldo|default_if_none:0|floatformat:2}}</td>                                                        
+                        <td class="importe {% if cpb.saldo > 0 %} text-danger{% elif cpb.saldo < 0 %} text-success {% endif %}">${{cpb.saldo|default_if_none:0|floatformat:2}}</td>
+                        <td class="importe_total">{{cpb.ultimo_pago|date:'d/m/Y'}}</td>                                                        
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -47,6 +49,7 @@
                         <th></th>                               
                         <th></th> 
                         <th class="importe"></th>                                 
+                        <th></th> 
                     </tr>
                 </tfoot>
             </table>            
