--- a/staticfiles/css/modificaciones.css
+++ b/staticfiles/css/modificaciones.css
@@ -486,3 +486,13 @@ textarea.form-control{height:auto}
     border: 1px solid transparent;
     border-radius: 4px;
 }
+
+.titulo_detalle{
+    font-size: 1em;
+    font-weight: bold;
+    text-align: center;
+}
+
+.texto_detalle{
+    font-size: 12px !important;
+}
