--- a/templates/productos/producto_form.html
+++ b/templates/productos/producto_form.html
@@ -90,7 +90,8 @@
 										                              <th style="width: 20%;">Lista</th>						                          						
 										                              <th style="width: 15%;" title="Precio de Costo" >P.Costo s/IVA</th>											
 										                              <th style="width: 15%;" title="Precio de Costo con Impuestos" >P.Costo c/Imp.</th>						
-										                              <th style="width: 5%;" title="" >Gan.&nbsp;<i class="fa fa-question-circle" data-toggle="tooltip" data-placement="top" title="Coeficiente de Ganancia (1=100%) [0 a 10] "></i></th>						
+										                              <th style="width: 5%;" title="" >Gan.&nbsp;
+										                              <i id="tit_precio" class="fa fa-question-circle recargarDatos" data-toggle="tooltip" data-placement="top" title="Coeficiente de Ganancia (1=100%) [0 a 10]"/></th>						
 										                              <th style="width: 15%;" title="Precio de Venta (Costo c/Imp * Coef.Gan.)">P.Venta</th>
 										                              <th style="width: 10%;" title="Coeficiente de Ganancia (1=100%)" >Coef.ITC</th>						
 										                              <th style="width: 10%;" title="Precio de Venta (Costo c/Imp * Coef.Gan.)">Coef.TH</th>
