--- a/templates/productos/lista_productos.html
+++ b/templates/productos/lista_productos.html
@@ -114,7 +114,7 @@ var tabla = $('#dataTables-primary').DataTable({
                 "sInfoEmpty": "Mostrando registros del 0 al 0 de un total de 0 registros",
                 "sInfoFiltered": "(filtrado de un total de _MAX_ registros)",
                 "sInfoPostFix": "",
-                "sSearch": "Buscar:",
+                "sSearch": "Buscar/Cód.Barras:",
                 "sUrl": "",
                 "sInfoThousands": ",",
                 "sLoadingRecords": "Cargando...",
