--- a/templates/ingresos/presupuesto/cpb_presup_form.html
+++ b/templates/ingresos/presupuesto/cpb_presup_form.html
@@ -84,6 +84,7 @@
 						                             <th style="width: 30%;">Producto/Servicio 
 									                    	<a id="recargarProductos" href="#" class="recargarDatos" type="button" data-toggle="tooltip" data-placement="top" 
 									                    	title="Recargar listados de Productos"><i class="fa fa-refresh"></i></a>
+									                    	<a id="agregarProductos" href="{% url 'producto_nuevo_modal' %}" class="recargarDatos fm-create" data-fm-callback="recargarP" data-fm-head="AGREGAR NUEVO PRODUCTO" type="button" data-toggle="tooltip" data-placement="top" title="Agregar Nuevo Producto"><i class="fa fa-plus"></i></a>
 									                  </th>						                          												
 						                              <th style="width: 20%;">Detalle</th>
 						                              <th style="width: 15px;">Cantidad</th>
