correccion bug recarga prods en compras

--- a/templates/base.html
+++ b/templates/base.html
@@ -94,6 +94,7 @@
       <script type="text/javascript">
         jQuery(document).ready(function() {
            $.modal({debug: false});
+           $.fm({debug: false});         
            Metronic.init();
            Layout.init();
            {% if messages %}
