--- a/templates/egresos/compras/cpb_compra_form.html
+++ b/templates/egresos/compras/cpb_compra_form.html
@@ -94,7 +94,7 @@
 						                              	
 									                    	<a id="recargarProductos" href="#" class="recargarDatos" type="button" data-toggle="tooltip" data-placement="top" 
 									                    	title="Recargar listados de Productos"><i class="fa fa-refresh"></i></a>
-									                    	<a id="agregarProductos" href="{% url 'producto_nuevo_modal' %}" class="recargarDatos fm-create" data-fm-callback="recargarP" data-fm-head="AGREGAR NUEVO PRODUCTO" type="button" data-toggle="tooltip" data-placement="top" title="Agregar Nuevo Producto"><i class="fa fa-plus"></i></a>
+									                    	<a id="agregarProductos" href="{% url 'producto_nuevo_modal' %}" class="recargarDatos fm-create" data-fm-callback="recargarProds" data-fm-head="AGREGAR NUEVO PRODUCTO" type="button" data-toggle="tooltip" data-placement="top" title="Agregar Nuevo Producto"><i class="fa fa-plus"></i></a>
 						                              	</th>						                          						
 						                              {% if not empresa.usa_impuestos %}<th style="width: 20%;">Detalle</th>{% endif %}
 						                              <th style="width: 15px;">Cantidad</th>
