--- a/modal/templates/modal/general/form_formapago.html
+++ b/modal/templates/modal/general/form_formapago.html
@@ -15,5 +15,20 @@
 					<div class="col-sm-1">{% bootstrap_field form.signo %}</div>
 			  	</div>								
 		</div>
+		<div class="modal-buttons">
+            <div class="row">
+                <div class="col-xs-6">
+                 <button data-dismiss="modal" class="btn btn-sm pull-left btn btn-danger" type="button">
+                      <i class="fa fa-times"></i> {% trans 'Cancelar' %}
+                 </button>
+                </div>
+                <div class="col-xs-6">
+                 <button  class="btn pull-right btn-sm btn-primary" id="Aceptar" type="submit">
+                      <i class="fa fa-check"></i>{% trans 'Aceptar' %}</button>
+                </div>
+              
+              </div>
+            
+        </div>
     </form>
 </div>
