--- a/modal/templates/modal/general/form_pto_vta.html
+++ b/modal/templates/modal/general/form_pto_vta.html
@@ -27,7 +27,22 @@
 			       	<div class="col-sm-5">{% bootstrap_field form.telefono %}</div>		
 			       	<div class="col-sm-4">{% bootstrap_field form.celular %}</div>		
 			     </div> 
-			</div>			
+			</div>
+			<div class="modal-buttons">
+            <div class="row">
+                <div class="col-xs-6">
+                 <button data-dismiss="modal" class="btn btn-sm pull-left btn btn-danger" type="button">
+                      <i class="fa fa-times"></i> {% trans 'Cancelar' %}
+                 </button>
+                </div>
+                <div class="col-xs-6">
+                 <button  class="btn pull-right btn-sm btn-primary" id="Aceptar" type="submit">
+                      <i class="fa fa-check"></i>{% trans 'Aceptar' %}</button>
+                </div>
+              
+              </div>
+            
+        </div>			
     </form>
 </div>
 
