--- a/modal/templates/modal/general/form_seguimiento.html
+++ b/modal/templates/modal/general/form_seguimiento.html
@@ -9,5 +9,20 @@
      {% csrf_token %}         
         {{ form.media }}
         <div class="col-xs-12">{% bootstrap_field form.seguimiento %}</div>
+        <div class="modal-buttons">
+            <div class="row">
+                <div class="col-xs-6">
+                 <button data-dismiss="modal" class="btn btn-sm pull-left btn btn-danger" type="button">
+                      <i class="fa fa-times"></i> {% trans 'Cancelar' %}
+                 </button>
+                </div>
+                <div class="col-xs-6">
+                 <button  class="btn pull-right btn-sm btn-primary" id="Aceptar" type="submit">
+                      <i class="fa fa-check"></i>{% trans 'Aceptar' %}</button>
+                </div>
+              
+              </div>
+            
+        </div>
     </form>
 </div>
