--- a/modal/templates/modal/productos/form_precio_prod.html
+++ b/modal/templates/modal/productos/form_precio_prod.html
@@ -13,8 +13,26 @@
 					<div class="col-sm-2">{% bootstrap_field form.precio_cimp %}</div>																		  
 					<div class="col-sm-2">{% bootstrap_field form.coef_ganancia %}</div>																		  
 					<div class="col-sm-2">{% bootstrap_field form.precio_venta %}</div>		
-					
+					{% if empresa.usa_impuestos %}
+						<div class="col-sm-2">{% bootstrap_field form.precio_itc %}</div>																		  
+						<div class="col-sm-2">{% bootstrap_field form.precio_tasa %}</div>		
+					{% endif %}
 			  	</div>	
 			</div>
+	<div class="modal-buttons">
+    <div class="row">
+        <div class="col-xs-6">
+         <button data-dismiss="modal" class="btn btn-sm pull-left btn btn-danger" type="button">
+              <i class="fa fa-times"></i> {% trans 'Cancelar' %}
+         </button>
+        </div>
+        <div class="col-xs-6">
+         <button  class="btn pull-right btn-sm btn-primary" id="Aceptar" type="submit">
+              <i class="fa fa-check"></i>{% trans 'Aceptar' %}</button>
+        </div>
+      
+      </div>
+    
+</div>		
     </form>
 </div>
