--- a/modal/templates/modal/productos/form_stock_prod.html
+++ b/modal/templates/modal/productos/form_stock_prod.html
@@ -12,6 +12,21 @@
 					<div class="col-sm-offset-3 col-sm-2">{% bootstrap_field form.stock %}</div>		
 			  	</div>	
 			</div>
+			<div class="modal-buttons">
+            <div class="row">
+                <div class="col-xs-6">
+                 <button data-dismiss="modal" class="btn btn-sm pull-left btn btn-danger" type="button">
+                      <i class="fa fa-times"></i> {% trans 'Cancelar' %}
+                 </button>
+                </div>
+                <div class="col-xs-6">
+                 <button  class="btn pull-right btn-sm btn-primary" id="Aceptar" type="submit">
+                      <i class="fa fa-check"></i>{% trans 'Aceptar' %}</button>
+                </div>
+              
+              </div>
+            
+        </div>
     </form>
 </div>
 <script type="text/javascript">
