--- a/templates/productos/actualizar_precios.html
+++ b/templates/productos/actualizar_precios.html
@@ -7,6 +7,7 @@
 
 <div style="width:520px" class="modal-dialog modal-modal">
         <div class="modal-content">
+              <div class=" col-sm-12">
                <div class="row">
                  <div data-dismiss="modal" class="close-modal">
                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>        
@@ -30,19 +31,22 @@
                 </div>
                 <div class="modal-buttons">
                       <div class="row">
+                        <div class="col-xs-12">  
                           <div class="col-xs-6">
-                            <button data-dismiss="modal" class="btn pull-left btn red-flamingo" type="button">
+                            <button data-dismiss="modal" class="btn pull-left btn-sm red-flamingo" type="button">
                                 <i class="fa fa-times"></i>
                                 Cancelar
                             </button>
                           </div>
                           <div class="col-xs-6">
-                            <button id="AceptarSeleccion" type="button" data-dismiss="modal" class="btn pull-right blue-steel"><i class="fa fa-check"></i>Aceptar</button>
+                            <button id="AceptarSeleccion" type="button" data-dismiss="modal" class="btn btn-sm pull-right blue-steel"><i class="fa fa-check"></i>Aceptar</button>
                           </div>
                       </div>
+                     </div> 
                  </div>
                 </form>
-            </div>  
+            </div> 
+           </div>  
         </div>
     
     <script src="{% static 'js/scripts/scripts_actualizar_precios.js' %}" type="text/javascript"></script>   
