--- a/templates/productos/nuevo_stock.html
+++ b/templates/productos/nuevo_stock.html
@@ -7,6 +7,7 @@
 
 <div style="width:50em" class="modal-dialog modal-modal">
         <div class="modal-content">
+          <div class="col-xs-12"> 
                <div class="row">
                  <div data-dismiss="modal" class="close-modal">
                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>        
@@ -29,14 +30,17 @@
                 <div class="modal-buttons">
                       <div class="row">
                           <div class="col-xs-12"> 
-                            <button data-dismiss="modal" class="btn pull-left btn red-flamingo" type="button">
-                                <i class="fa fa-times"></i>Cancelar</button>
-                                <button id="AceptarSeleccion" type="button" data-dismiss="modal" class="btn pull-right blue-steel"><i class="fa fa-check"></i>Aceptar</button>
+                            <div class=" col-sm-6"><button data-dismiss="modal" class="btn pull-left btn-sm red-flamingo" type="button">
+                                <i class="fa fa-times"></i>Cancelar</button></div>
+                            <div class=" col-sm-6">
+                                <button id="AceptarSeleccion" type="button" data-dismiss="modal" class="btn btn-sm pull-right blue-steel"><i class="fa fa-check"></i>Aceptar</button>
+                            </div>
                           </div>
                       </div>
                  </div>
                 </form>
-            </div>  
+            </div> 
+          </div>  
         </div>
      <script src="{% static 'js/scripts/scripts_nuevo_stock.js' %}" type="text/javascript"></script>   
        
