--- a/templates/general/movimientos/movimientos_listado.html
+++ b/templates/general/movimientos/movimientos_listado.html
@@ -72,11 +72,9 @@
                                       </button>
                                       <ul class="dropdown-menu dropdown-menu-default">                                        
                                         <li><a href="{% url 'movimientos_editar' id=cpb.cpb_comprobante.pk %}"  title="Editar" data-modal-callback="reload" ><i class="icon-note"></i> Editar</a></li>
-                                        {% if not cpb.cae %}
                                         <li><a href="#" 
                                                     onClick="alerta= alertify.dialog('confirm').set({'labels':{ok:'Aceptar', cancel:'Cancelar'},'message': '¿DESEA ELIMINAR EL REGISTRO SELECCIONADO?',transition:'fade','onok': function(){ window.location.href = '{% url 'movimientos_eliminar' id=cpb.cpb_comprobante.pk %}'; },'oncancel': function(){ return true;} }); alerta.setting('modal', true); alerta.setHeader('ELIMINAR COMPROBANTE'); alerta.show(); return true;"><i class="icon-trash"></i>Eliminar</a>
-                                                </li>
-                                        {% endif %}
+                                                </li>                                        
                                         <li role="separator" class="divider"></li>
                                             <li><a href="{% url 'cpb_editar_seguimiento' id=cpb.cpb_comprobante.pk %}"  class="modal-update" data-modal-head="EDITAR SEGUIMIENTO"  title="Editar Seguimiento" data-modal-target="#object-{{ item.pk }}" data-modal-callback="reload" ><i class="icon-speech"></i>Seguimiento</a></li>
                                       </ul>
@@ -124,7 +122,7 @@
 <div id="popup" class="modal fade " role="dialog"  data-backdrop="static"  data-keyboard="false"></div>    
 <div id="popup_impresion" class="modal fade " role="dialog"  data-backdrop="static"  data-keyboard="false"></div>    
  
-{% include "fm/movimientos/modal.html" %}
+{% include "modal/movimientos/modal.html" %}
 <script type="text/javascript">
 $(document).ready(function() { 
 
